// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion renders correctly with allowMultiple 1`] = `
<div
  className="accordion"
  data-testid="monday-accordion"
  data-vibe="monday-accordion"
>
  <div
    className=""
    id="monday-accordion--item-0"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-0"
      id="expand-collapse--monday-accordion--item-0"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-0-controls"
          aria-expanded={true}
          className="header section headerOpen"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconOpen"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
        <div
          className="content section animateExpandCollapseContent"
          id="expand-collapse--monday-accordion--item-0-controls"
          role="region"
        />
      </div>
    </div>
  </div>
  <div
    className=""
    id="monday-accordion--item-1"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-1"
      id="expand-collapse--monday-accordion--item-1"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-1-controls"
          aria-expanded={false}
          className="header section"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconClose"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className=""
    id="monday-accordion--item-2"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-2"
      id="expand-collapse--monday-accordion--item-2"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse accordionItemExpandCollapseLast"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-2-controls"
          aria-expanded={true}
          className="header section headerOpen"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconOpen"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
        <div
          className="content section animateExpandCollapseContent"
          id="expand-collapse--monday-accordion--item-2-controls"
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders correctly with children 1`] = `
<div
  className="accordion"
  data-testid="monday-accordion"
  data-vibe="monday-accordion"
>
  <div
    className=""
    id="monday-accordion--item-0"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-0"
      id="expand-collapse--monday-accordion--item-0"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-0-controls"
          aria-expanded={false}
          className="header section"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconClose"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className=""
    id="monday-accordion--item-1"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-1"
      id="expand-collapse--monday-accordion--item-1"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-1-controls"
          aria-expanded={false}
          className="header section"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconClose"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className=""
    id="monday-accordion--item-2"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-2"
      id="expand-collapse--monday-accordion--item-2"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse accordionItemExpandCollapseLast"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-2-controls"
          aria-expanded={false}
          className="header section"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconClose"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders correctly with className 1`] = `
<div
  className="accordion test"
  data-testid="monday-accordion"
  data-vibe="monday-accordion"
/>
`;

exports[`Accordion renders correctly with custom AccordionItem title 1`] = `
<div
  className="accordion"
  data-testid="monday-accordion"
  data-vibe="monday-accordion"
>
  <div
    className=""
    id="monday-accordion--item-0"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-0"
      id="expand-collapse--monday-accordion--item-0"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse accordionItemExpandCollapseLast"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-0-controls"
          aria-expanded={false}
          className="header section"
          onClickCapture={[Function]}
          type="button"
        >
          <div>
            custom title
          </div>
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconClose"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders correctly with defaultIndex prop 1`] = `
<div
  className="accordion"
  data-testid="monday-accordion"
  data-vibe="monday-accordion"
>
  <div
    className=""
    id="monday-accordion--item-0"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-0"
      id="expand-collapse--monday-accordion--item-0"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-0-controls"
          aria-expanded={true}
          className="header section headerOpen"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconOpen"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
        <div
          className="content section animateExpandCollapseContent"
          id="expand-collapse--monday-accordion--item-0-controls"
          role="region"
        />
      </div>
    </div>
  </div>
  <div
    className=""
    id="monday-accordion--item-1"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-1"
      id="expand-collapse--monday-accordion--item-1"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-1-controls"
          aria-expanded={false}
          className="header section"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconClose"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className=""
    id="monday-accordion--item-2"
  >
    <div
      data-testid="expand-collapse_expand-collapse--monday-accordion--item-2"
      id="expand-collapse--monday-accordion--item-2"
    >
      <div
        className="expandCollapse showBorder accordionItemExpandCollapse accordionItemExpandCollapseLast"
      >
        <button
          aria-controls="expand-collapse--monday-accordion--item-2-controls"
          aria-expanded={false}
          className="header section"
          onClickCapture={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="icon iconComponent animateIconClose"
            data-testid="icon"
            data-vibe="icon"
            fill="currentColor"
            height="24"
            viewBox="0 0 20 20"
            width="24"
          >
            <path
              d="M9.442 12.762a.77.77 0 0 0 1.116 0l4.21-4.363a.84.84 0 0 0 0-1.158.77.77 0 0 0-1.116 0L10 11.027 6.348 7.24a.77.77 0 0 0-1.117 0 .84.84 0 0 0 0 1.158l4.21 4.363Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders correctly with empty props 1`] = `
<div
  className="accordion"
  data-testid="monday-accordion"
  data-vibe="monday-accordion"
/>
`;

exports[`Accordion renders correctly with id 1`] = `
<div
  className="accordion"
  data-testid="monday-accordion"
  data-vibe="monday-accordion"
  id="test"
/>
`;
